--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "misterioso013/cpf",
   "description": "Simples Gerador e Validador de CPF PHP",
-  "minimum-stability": "dev",
+  "minimum-stability": "stable",
   "homepage": "https://github.com/misterioso013/cpf",
   "license": "MIT",
   "keywords": [
@@ -12,19 +12,42 @@
   "authors": [
     {
       "name": "Rosiel Victor",
-      "email": "ola@devsonhador.com.br",
-      "homepage": "https://helpdevelop.top",
+      "email": "rosielvictor.dev@gmail.com",
+      "homepage": "https://github.com/misterioso013",
       "role": "Developer"
     }
   ],
   "require": {
-    "php": ">=7.4.0",
+    "php": ">=8.1",
     "ext-mbstring": "*"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^10.0",
+    "phpstan/phpstan": "^1.10",
+    "friendsofphp/php-cs-fixer": "^3.0"
   },
   "autoload": {
     "psr-4": {
       "Misterioso013\\Tools\\": "src/"
     }
   },
-  "type": "library"
+  "autoload-dev": {
+    "psr-4": {
+      "Misterioso013\\Tools\\Tests\\": "tests/"
+    }
+  },
+  "config": {
+    "sort-packages": true,
+    "optimize-autoloader": true
+  },
+  "scripts": {
+    "test": "phpunit",
+    "cs-fix": "php-cs-fixer fix --allow-risky=yes",
+    "analyse": "phpstan analyse src tests",
+    "check": [
+      "@cs-fix",
+      "@analyse",
+      "@test"
+    ]
+  }
 }
